force-app/libs/integration-framework/objects/IntegrationLog__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>