force-app/libs/integration-framework/objects/IntegrationLog__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>