force-app/libs/integration-framework/objects/IntegrationLog__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>