force-app/libs/integration-framework/objects/IntegrationLog__c/fields/Timeout_Encountered__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Encountered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timeout Encountered</label>
    <type>Checkbox</type>
</CustomField>