force-app/libs/integration-framework/objects/IntegrationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Function_Name__c</columns>
    <columns>Call_Duration__c</columns>
    <columns>Success__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>